force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Batch_Duplex_Printing__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Batch_Duplex_Printing__c</fullName>
    <formula>BGBL__Batch_Letter__r.BGBL__Batch_Duplex_Printing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Duplex Printing</label>
    <type>Checkbox</type>
</CustomField>