force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Batch_File_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Batch_File_Chunk_Size__c</fullName>
    <formula>$Setup.BGBL__Letter_Single__c.BGBL__Batch_Letter_Chunk_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch File Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>