force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Batch_Letter_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Batch_Letter_Name__c</fullName>
    <formula>BGBL__Batch_Letter__r.BGBL__File_Name_Prefix__c</formula>
    <label>File Name Prefix</label>
    <type>Text</type>
</CustomField>