force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__debug__c.field-meta.xml
<CustomField>
    <fullName>BGBL__debug__c</fullName>
    <label>System Messages</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>