force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Number_of_Jobs__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Number_of_Jobs__c</fullName>
    <description>Number of Jobs</description>
    <label>Number of Jobs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>