force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Org_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Org_Name__c</fullName>
    <formula>$Organization.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used only in reporting which source org requested the letter.</inlineHelpText>
    <label>Org Name</label>
    <type>Text</type>
</CustomField>