force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Output_Type__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Output_Type__c</fullName>
    <label>Output Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>