force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Parent_Letter_Job__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Parent_Letter_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>the original job in which this sub job spun from.</inlineHelpText>
    <label>Parent Letter Job</label>
    <referenceTo>BGBL__Batch_Letter_Job__c</referenceTo>
    <relationshipLabel>Letter Jobs</relationshipLabel>
    <relationshipName>Sub_Letter_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>