force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Print_File_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Print_File_Name__c</fullName>
    <label>Print File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>