force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Save_Batch_Letter__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Save_Batch_Letter__c</fullName>
    <formula>BGBL__Batch_Letter__r.BGBL__Save_Batch_Letter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Save Batch File</label>
    <type>Checkbox</type>
</CustomField>