force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Save_Generated_Document_as_File__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Save_Generated_Document_as_File__c</fullName>
    <formula>$Setup.BGBL__Letter_Single__c.BGBL__Save_Generated_Document_as_File__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Save Generated Document as File</label>
    <type>Checkbox</type>
</CustomField>