force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Start_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Started Time</label>
    <type>DateTime</type>
</CustomField>