force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Status__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Queue (verifying...)</fullName>
                <default>true</default>
                <label>In Queue (verifying...)</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>