force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>BGBL__TemplateId__c</fullName>
    <formula>BGBL__Batch_Letter__r.BGBL__Merge_Template__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TemplateId</label>
    <type>Text</type>
</CustomField>