force-app/main/default/objects/BGBL__Batch_Letter_Job__c/listViews/BGBL__All.listView-meta.xml
<ListView>
    <fullName>BGBL__All</fullName>
    <columns>NAME</columns>
    <columns>BGBL__Status__c</columns>
    <columns>BGBL__Submit_DateTime__c</columns>
    <columns>BGBL__Start_Time__c</columns>
    <columns>BGBL__End_Time__c</columns>
    <columns>BGBL__Batch_Letter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>